[project]
name = "miscbox"
dynamic = ["version"]
description = "Collection of handy utils written in Python 3"
authors = [
    {name = "ak1ra", email = "git@ak1ra.xyz"},
]
dependencies = [
    "argcomplete>=3.6.2",
    "httpx>=0.28.1",
    "mobi>=0.3.3",
    "netaddr>=1.3.0",
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "pathspec>=0.12.1",
    "Pillow>=11.2.1",
    "psutil>=7.0.0",
    "py7zr>=1.0.0",
]
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console",
]
keywords = []
readme = {file = "README.md", content-type = "text/markdown"}

# A previous PEP had specified license to be a table with a file or a text key, this format is now deprecated.
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#license-and-license-files
license = "MIT"


[project.urls]
Repository = "https://github.com/ak1ra-lab/miscbox"
Issues = "https://github.com/ak1ra-lab/miscbox/issues"
Changelog = "https://github.com/ak1ra-lab/miscbox/blob/master/CHANGELOG.md"


[project.scripts]
deb-extract = "miscbox.deb_extract:main"
dir-archive = "miscbox.dir_archive:main"
enc-recover = "miscbox.enc_recover:main"
merge-ip-ranges = "miscbox.merge_ip_ranges:main"
mobi-archive = "miscbox.mobi_archive:main"
netstats = "miscbox.netstats:main"
punc-conv = "miscbox.punc_conv:main"
rename-with-date = "miscbox.rename_with_date:main"
rotate-images = "miscbox.rotate_images:main"
shasum-list = "miscbox.shasum_list:main"
sort-keys = "miscbox.sort_keys:main"
urlencode = "miscbox.urlencode:main"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pdm.version]
source = "scm"


[dependency-groups]
tests = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
lint = [
    "ruff>=0.9.4",
]
dev = [
    {include-group = "tests"},
    {include-group = "lint"},
    "nox>=2024.10.9",
    "pre-commit>=4.2.0",
]
